--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type = "text/javascript" src = "chap1,2,3.js"></script>
+    <!-- <script type = "text/javascript" src = "chap1,2,3.js"></script> -->
+    <script type = "text/javascript" src = "chap5,6,7.js"></script>
     <title>Document</title>
 </head>
 <body>
