java script chapter 10 to 14

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <script type = "text/javascript" src = "chap1,2,3.js"></script> -->
     <!-- <script type = "text/javascript" src = "chap5,6,7.js"></script> -->
-    <script type = "text/javascript" src = "chap9.js"></script>
+    <!-- <script type = "text/javascript" src = "chap9.js"></script> -->
+    <script type = "text/javascript" src = "chap10-14.js"></script>
     <title>Document</title>
 </head>
 <body>
